--- a/WebscrappingAnalysis.ipynb
+++ b/WebscrappingAnalysis.ipynb
@@ -2,6 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 Angry Men (Twelve Angry Men) (1957) \n"
+     ]
+    }
+   ],
+   "source": [
+    "df_list = []\n",
+    "folder = 'rt_html'\n",
+    "\n",
+    "for mov in os.listdir(folder):\n",
+    "    with open(os.path.join(folder,mov)) as file:\n",
+    "        soup = BeautifulSoup(file,'lxml')\n",
+    "        title = soup.find('title').contents[0][:-len('- Rotten Tomatoes')]\n",
+    "        audience_score = soup.find('div', class_ = 'audience-score meter').find('span').contents[0][:-1]\n",
+    "        user_ratings = soup.find('div', class_ = 'audience-info hidden-xs superPageFontColor' ).find_all('div')[1].contents[2].strip().replace(\",\" , \"\")\n",
+    "        df_list.append({'title' : title ,'audience_score':int(audience_score),'number of user_ratings':int(user_ratings) })\n",
+    "        #print(title)\n",
+    "        #break\n",
+    "data = pd.DataFrame(df_list, columns = ['Title' ,'audience_score', 'number of user_ratings'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>audience_score</th>\n",
+       "      <th>number of user_ratings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>97</td>\n",
+       "      <td>103672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>86</td>\n",
+       "      <td>23647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>89</td>\n",
+       "      <td>33584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94</td>\n",
+       "      <td>44564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>89</td>\n",
+       "      <td>17768</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Title  audience_score  number of user_ratings\n",
+       "0    NaN              97                  103672\n",
+       "1    NaN              86                   23647\n",
+       "2    NaN              89                   33584\n",
+       "3    NaN              94                   44564\n",
+       "4    NaN              89                   17768"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
