Dataset generated from Html files

--- a/WebscrappingAnalysis.ipynb
+++ b/WebscrappingAnalysis.ipynb
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12 Angry Men (Twelve Angry Men) (1957) \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_list = []\n",
     "folder = 'rt_html'\n",
@@ -37,12 +29,12 @@
     "        df_list.append({'title' : title ,'audience_score':int(audience_score),'number of user_ratings':int(user_ratings) })\n",
     "        #print(title)\n",
     "        #break\n",
-    "data = pd.DataFrame(df_list, columns = ['Title' ,'audience_score', 'number of user_ratings'])\n"
+    "data = pd.DataFrame(df_list, columns = ['title' ,'audience_score', 'number of user_ratings'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +58,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Title</th>\n",
+       "      <th>title</th>\n",
        "      <th>audience_score</th>\n",
        "      <th>number of user_ratings</th>\n",
        "    </tr>\n",
@@ -74,31 +66,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>12 Angry Men (Twelve Angry Men) (1957)</td>\n",
        "      <td>97</td>\n",
        "      <td>103672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>The 39 Steps (1935)</td>\n",
        "      <td>86</td>\n",
        "      <td>23647</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>The Adventures of Robin Hood (1938)</td>\n",
        "      <td>89</td>\n",
        "      <td>33584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>All About Eve (1950)</td>\n",
        "      <td>94</td>\n",
        "      <td>44564</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>All Quiet on the Western Front (1930)</td>\n",
        "      <td>89</td>\n",
        "      <td>17768</td>\n",
        "    </tr>\n",
@@ -107,15 +99,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   Title  audience_score  number of user_ratings\n",
-       "0    NaN              97                  103672\n",
-       "1    NaN              86                   23647\n",
-       "2    NaN              89                   33584\n",
-       "3    NaN              94                   44564\n",
-       "4    NaN              89                   17768"
+       "                                     title  audience_score  \\\n",
+       "0  12 Angry Men (Twelve Angry Men) (1957)               97   \n",
+       "1                     The 39 Steps (1935)               86   \n",
+       "2     The Adventures of Robin Hood (1938)               89   \n",
+       "3                    All About Eve (1950)               94   \n",
+       "4   All Quiet on the Western Front (1930)               89   \n",
+       "\n",
+       "   number of user_ratings  \n",
+       "0                  103672  \n",
+       "1                   23647  \n",
+       "2                   33584  \n",
+       "3                   44564  \n",
+       "4                   17768  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
