Created new dataframe with text file

--- a/WebscrappingAnalysis.ipynb
+++ b/WebscrappingAnalysis.ipynb
@@ -572,110 +572,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1-the-wizard-of-oz-1939-film.txt',\n",
-       " '10-metropolis-1927-film.txt',\n",
-       " '100-battleship-potemkin.txt',\n",
-       " '11-e.t.-the-extra-terrestrial.txt',\n",
-       " '12-modern-times-film.txt',\n",
-       " '14-singin-in-the-rain.txt',\n",
-       " '15-boyhood-film.txt',\n",
-       " '16-casablanca-film.txt',\n",
-       " '17-moonlight-2016-film.txt',\n",
-       " '18-psycho-1960-film.txt',\n",
-       " '19-laura-1944-film.txt',\n",
-       " '2-citizen-kane.txt',\n",
-       " '20-nosferatu.txt',\n",
-       " '21-snow-white-and-the-seven-dwarfs-1937-film.txt',\n",
-       " '22-a-hard-day27s-night-film.txt',\n",
-       " '23-la-grande-illusion.txt',\n",
-       " '25-the-battle-of-algiers.txt',\n",
-       " '26-dunkirk-2017-film.txt',\n",
-       " '27-the-maltese-falcon-1941-film.txt',\n",
-       " '29-12-years-a-slave-film.txt',\n",
-       " '3-the-third-man.txt',\n",
-       " '30-gravity-2013-film.txt',\n",
-       " '31-sunset-boulevard-film.txt',\n",
-       " '32-king-kong-1933-film.txt',\n",
-       " '33-spotlight-film.txt',\n",
-       " '34-the-adventures-of-robin-hood.txt',\n",
-       " '35-rashomon.txt',\n",
-       " '36-rear-window.txt',\n",
-       " '37-selma-film.txt',\n",
-       " '38-taxi-driver.txt',\n",
-       " '39-toy-story-3.txt',\n",
-       " '4-get-out-film.txt',\n",
-       " '40-argo-2012-film.txt',\n",
-       " '41-toy-story-2.txt',\n",
-       " '42-the-big-sick.txt',\n",
-       " '43-bride-of-frankenstein.txt',\n",
-       " '44-zootopia.txt',\n",
-       " '45-m-1931-film.txt',\n",
-       " '46-wonder-woman-2017-film.txt',\n",
-       " '48-alien-film.txt',\n",
-       " '49-bicycle-thieves.txt',\n",
-       " '5-mad-max-fury-road.txt',\n",
-       " '50-seven-samurai.txt',\n",
-       " '51-the-treasure-of-the-sierra-madre-film.txt',\n",
-       " '52-up-2009-film.txt',\n",
-       " '53-12-angry-men-1957-film.txt',\n",
-       " '54-the-400-blows.txt',\n",
-       " '55-logan-film.txt',\n",
-       " '57-army-of-shadows.txt',\n",
-       " '58-arrival-film.txt',\n",
-       " '59-baby-driver.txt',\n",
-       " '6-the-cabinet-of-dr.-caligari.txt',\n",
-       " '60-a-streetcar-named-desire-1951-film.txt',\n",
-       " '61-the-night-of-the-hunter-film.txt',\n",
-       " '62-star-wars-the-force-awakens.txt',\n",
-       " '63-manchester-by-the-sea-film.txt',\n",
-       " '64-dr.-strangelove.txt',\n",
-       " '66-vertigo-film.txt',\n",
-       " '67-the-dark-knight-film.txt',\n",
-       " '68-touch-of-evil.txt',\n",
-       " '69-the-babadook.txt',\n",
-       " '7-all-about-eve.txt',\n",
-       " '72-rosemary27s-baby-film.txt',\n",
-       " '73-finding-nemo.txt',\n",
-       " '74-brooklyn-film.txt',\n",
-       " '75-the-wrestler-2008-film.txt',\n",
-       " '77-l.a.-confidential-film.txt',\n",
-       " '78-gone-with-the-wind-film.txt',\n",
-       " '79-the-good-the-bad-and-the-ugly.txt',\n",
-       " '8-inside-out-2015-film.txt',\n",
-       " '80-skyfall.txt',\n",
-       " '82-tokyo-story.txt',\n",
-       " '83-hell-or-high-water-film.txt',\n",
-       " '84-pinocchio-1940-film.txt',\n",
-       " '85-the-jungle-book-2016-film.txt',\n",
-       " '86-la-la-land-film.txt',\n",
-       " '87-star-trek-film.txt',\n",
-       " '89-apocalypse-now.txt',\n",
-       " '9-the-godfather.txt',\n",
-       " '90-on-the-waterfront.txt',\n",
-       " '91-the-wages-of-fear.txt',\n",
-       " '92-the-last-picture-show.txt',\n",
-       " '93-harry-potter-and-the-deathly-hallows-part-2.txt',\n",
-       " '94-the-grapes-of-wrath-film.txt',\n",
-       " '96-man-on-wire.txt',\n",
-       " '97-jaws-film.txt',\n",
-       " '98-toy-story.txt',\n",
-       " '99-the-godfather-part-ii.txt']"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.listdir('ebert_review')"
+    "#os.listdir('ebert_review')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we need to read the contents stored in the http folder to a dataframe\n",
+    "#reading text file\n",
+    "#we use glob library to retrive files\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_list = []\n",
+    "\n",
+    "for review in glob.glob('ebert_review/*.txt'):\n",
+    "    with open(review, encoding = 'utf-8') as file:\n",
+    "        \n",
+    "        title = file.readline()[:-1]\n",
+    "        website_url = file.readline()[:-1]\n",
+    "        content = file.read()\n",
+    "        df_list.append({'title' : title,'website_url' : website_url, 'website_content' : content})\n",
+    "data = pd.DataFrame(df_list,columns = ['title','website_url','website_content'])\n",
+    "x = data[data['title'] == 'The Wizard of Oz (1939)'].website_content\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
